Cleanup of the indexer and all tests to follow the right pattern